syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.order";
option java_outer_classname = "OrderProto";

package order;


service OrderService {
  rpc placeOrder (OrderRequest) returns (OrderResponse);
  rpc updateOrder (OrderRequest) returns (OrderResponse);
}


message OrderRequest {
  string product = 1;
}


message OrderResponse {
  string msg = 1;
  repeated string products = 2;
}
